# mortimer-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
prompts/: rag_system.txt  rag_user.txt
src/mortimer/: __init__.py  cli.py  config.py
src/mortimer/generation/: llm_client.py  prompt.py
src/mortimer/ingestion/: chunker.py  loader.py
src/mortimer/models/: schemas.py
src/mortimer/pipeline/: rag.py
src/mortimer/retrieval/: embedder.py  vector_store.py
tests/: conftest.py
tests/integration/: test_ingestion_pipeline.py  test_rag_pipeline.py
tests/unit/: test_chunker.py  test_chunking_strategy.py  test_cli.py  test_config.py  test_data_structuring.py  test_embedder.py  test_llm_client.py  test_loader.py  test_prompt.py  test_rag_pipeline.py  test_retrieval_design.py  test_schemas.py  test_vector_store.py
