[project]
name = "mortimer-agent"
version = "0.1.0"
description = "RAG document assistant for arxiv PDFs"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
mortimer = "mortimer.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mortimer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short -v"
markers = [
    "embedding_integration: tests that load a real sentence-transformer model and hit real ChromaDB; exclude with -m 'not embedding_integration' for fast runs",
]

[tool.coverage.run]
source = ["src/mortimer"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
